Standardize list access to use getFirst() throughout app module (#28)
Replace all get(0) calls with getFirst() for clearer intent and better
error messages on empty lists (Java 21 SequencedCollection API).